--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "email": "email@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "ext-pdo": "*"
+    },
     "autoload": {
         "psr-4": {
             "App\\": "app/"
