--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "ext-pdo": "*",
-        "ext-json": "*"
+        "ext-json": "*",
+        "fzaninotto/faker": "^1.8"
     },
     "autoload": {
         "psr-4": {
