--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
     "require": {
         "ext-pdo": "*",
         "ext-json": "*",
-        "fzaninotto/faker": "^1.8"
+        "fzaninotto/faker": "^1.8",
+        "monolog/monolog": "^1.24",
+        "phpmailer/phpmailer": "^6.0"
     },
     "autoload": {
         "psr-4": {
